fixed bug of card title too long

--- a/ToMovier/src/components/style/Card.css
+++ b/ToMovier/src/components/style/Card.css
@@ -79,10 +79,23 @@
     height: 2.5rem;
     }
 
+    .card-rate-container{
+        display: flex;
+        align-items: center;
+    }
+
     .card-rate{
         color: white;
         font-weight: bold;
         font-size: 0.8rem;
+        margin: 0;
+    }
+
+    .card-title-container{
+        display: flex;
+        height: 3rem;
+        align-items: center;
+        margin-top: 0.5rem;
     }
 
     .card-title{
@@ -91,6 +104,7 @@
         margin: 0;
         margin-top: 0.3rem;
         font-size: 1.1rem;
+        text-align: center;
     }
 
     .button-open{
@@ -197,18 +211,31 @@
         height: 1.5rem;
     }
 
+    .card-rate-container{
+        display: flex;
+        align-items: center;
+    }
+
     .card-rate{
         color: white;
         font-weight: bold;
         font-size: 0.5rem;
+        margin: 0;
     }
 
+    .card-title-container{
+        display: flex;
+        height: 2rem;
+        align-items: center;
+        margin-top: 0.5rem;
+    }
+    
     .card-title{
         color: white;
         font-weight: bold;
         margin: 0;
-        margin-top: 0.3rem;
-        font-size: 0.8rem;
+        font-size: 0.7rem;
+        text-align: center;
     }
 
     .button-open{
